@@ -7,15 +7,12 @@ cache:
 dist: xenial
 sudo: false
 python:
-- '3.4'
 - '3.5'
 - '3.6'
+- '3.7'
+- '3.8'
 matrix:
   include:
-  - language: python
-    python: '3.7'
-  - language: python
-    python: '3.8'
   - os: osx
     language: generic
     env: NMODE=nikola OS=macOS
