@@ -11,7 +11,6 @@ ipykernel>=4.0.0
 ghp-import2>=1.0.0
 aiohttp>=2.3.8
 watchdog>=0.8.3
-ruamel.yaml>=0.15 ; python_version >= '3.5'
-ruamel.yaml>=0.15,<=0.15.94 ; python_version < '3.5'  # rq.filter: <=0.15.94
+ruamel.yaml>=0.15
 toml>=0.9.2
 
