@@ -6,8 +6,7 @@ docutils>=0.13
 mako>=1.0.0
 Markdown>=3.0.0
 unidecode>=0.04.16
-lxml>=3.3.5 ; python_version >= '3.5'
-lxml>=3.3.5,<=4.3.5 ; python_version < '3.5'  # rq.filter: <=4.3.5
+lxml>=3.3.5
 Yapsy>=1.11.223
 PyRSS2Gen>=1.1
 logbook>=1.3.0
